Update Minecraft adapter source consistency